--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 11 18:22:46 CST 2016
-ndk.dir=/home/shy/alpha/android-sdk-linux/ndk-bundle
-sdk.dir=/home/shy/alpha/android-sdk-linux
+#Fri May 20 22:09:14 CST 2016
+ndk.dir=D\:\\Users\\gs\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\Users\\gs\\AppData\\Local\\Android\\sdk
