--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +19,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <!-- begin: baidu speech sdk-->
+        <!-- 请填写真实的APP_ID API_KEY SECRET_KEY -->
+        <meta-data android:name="com.baidu.speech.APP_ID" android:value="8166810"/>
+        <meta-data android:name="com.baidu.speech.API_KEY" android:value="17F9KjLksspV4j58QbHnszWH"/>
+        <meta-data android:name="com.baidu.speech.SECRET_KEY" android:value="03bcfd4fe10167621188ad578377669e"/>
+        <service android:name="com.baidu.speech.VoiceRecognitionService" android:exported="false" />
+        <activity
+            android:name="com.baidu.voicerecognition.android.ui.BaiduASRDigitalDialog"
+            android:configChanges="orientation|keyboardHidden|screenLayout"
+            android:theme="@android:style/Theme.Dialog"
+            android:exported="false"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="com.baidu.action.RECOGNIZE_SPEECH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <!-- end : baidu speech sdk-->
         <activity
             android:name=".activitys.MainActivity"
             android:launchMode="singleTask"
@@ -49,6 +69,9 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".activitys.HeadLightActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activitys.ActivityTouch"
             android:screenOrientation="landscape" />
     </application>
 
