--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     //    compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.1.0'
     compile files('libs/AlphaSDKV1.0.1.jar')
     compile files('libs/VoiceRecognition-2.0.1.jar')
+    compile files('libs/zxing.jar')
 }
