--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -56,10 +65,6 @@
             android:launchMode="singleTask"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".activitys.CameraActivity"
-            android:launchMode="singleTask"
-            android:screenOrientation="landscape" />
-        <activity
             android:name=".activitys.ResultActivity"
             android:launchMode="singleTask"
             android:screenOrientation="landscape" />
@@ -72,6 +77,12 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".activitys.ActivityTouch"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activitys.CaptureActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activitys.CameraResultActivity"
             android:screenOrientation="landscape" />
     </application>
 
