del baidu voice offline file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile files('libs/VoiceRecognition-2.0.1.jar')
     compile files('libs/zxing.jar')
     compile project(':ToggleButtonLib')
+//    compile 'com.loopj.android:android-async-http:1.4.9'
 }
