--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,10 @@ dependencies {
     //    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.1.0'
     //Optional for built-in cards
     //    compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.1.0'
-    compile files('libs/AlphaSDKV1.0.1.jar')
     compile files('libs/VoiceRecognition-2.0.1.jar')
     compile files('libs/zxing.jar')
     compile project(':ToggleButtonLib')
+    compile project(':alphasdk-release');
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile files('libs/gson-1.7.1.jar')
 }
